# PCKasse-sql-export

./: README.md  docker-compose.yml  pyproject.toml  sample.env
db/: Dockerfile  articles.sql  cash.sql  customers.sql  invoices.sql  orders.sql  purchase.sql  shopify_products.sql
pckasse_sql_export/: Dockerfile  main.py  pyproject.toml
