[tool.poetry]
name = "pckasse-sql-export"
version = "0.1.0"
description = ""
authors = ["morten.aslesen <mortendaehli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
